<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rel_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_normal"
                >

                <TextView
                    android:id="@+id/txv_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_11"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/shape_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txv_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_12"/>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rel_21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/shape_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txv_21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_21"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/shape_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txv_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_22"/>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rel_31"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/shape_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txv_31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_31"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/shape_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txv_32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/artificial_detection_32"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
